# flipl

./: .gitmodules  CMakeLists.txt  README.md  setup.bat  setup.sh
docs/: Getting-Started.md  Specification.md
examples/: blend.fl  newton.fl
flipl/include/: application.h
flipl/src/: generator.h  main.cpp  parser.h  timeline.cpp  timeline.h
